lots of bug squishing

--- a/client/src/components/styles/Button.scss
+++ b/client/src/components/styles/Button.scss
@@ -44,7 +44,20 @@
       margin: 0px;
     }
     cursor: pointer;
+    &-disabled {
+      background-color: #d0d0d0;
+      padding: 1.5rem;
+      width: 15rem;
+      border-radius: 40px;
+      border: none;
+      filter: drop-shadow(0px 0px 4px #00000025);
+      h4 {
+        margin: 0px;
+        color: rgb(95, 95, 95);
+      }
+    }
   }
+  
   &-cancel {
     background-color: #f9c6f5;
     padding: 1.5rem;
